--- a/output/index.html
+++ b/output/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>arvimal.github.io</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.github.io Atom Feed" />
 </head>
 
 <body id="index" class="home">
@@ -47,6 +48,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
