--- a/output/archives.html
+++ b/output/archives.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>arvimal.github.io</title>
+        <title>arvimal.blog</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.github.io Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">arvimal.github.io </a></h1>
+                <h1><a href="/">arvimal.blog </a></h1>
                 <nav><ul>
                     <li><a href="/category/testing.html">Testing</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for arvimal.github.io</h1>
+<h1>Archives for arvimal.blog</h1>
 
 <dl>
     <dt>Sat 03 October 2020</dt>
@@ -35,7 +34,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
