--- a/output/tags.html
+++ b/output/tags.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>arvimal.github.io - Tags</title>
+        <title>arvimal.blog - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.github.io Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">arvimal.github.io </a></h1>
+                <h1><a href="/">arvimal.blog </a></h1>
                 <nav><ul>
                     <li><a href="/category/testing.html">Testing</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for arvimal.github.io</h1>
+    <h1>Tags for arvimal.blog</h1>
     <ul>
     </ul>
 </section>
@@ -34,7 +33,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
