--- a/output/testing-arvimalgithubio.html
+++ b/output/testing-arvimalgithubio.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8" />
         <title>Testing `arvimal.github.io`</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.github.io Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">arvimal.github.io </a></h1>
+                <h1><a href="/">arvimal.blog </a></h1>
                 <nav><ul>
                     <li class="active"><a href="/category/testing.html">Testing</a></li>
                 </ul></nav>
@@ -56,7 +55,6 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
