Testing pelican static webpages

--- a/output/authors.html
+++ b/output/authors.html
@@ -3,21 +3,22 @@
 <head>
         <meta charset="utf-8" />
         <title>arvimal.blog - Authors</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="https://arvimal.blog/theme/css/main.css" />
+        <link href="https://arvimal.blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.blog Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">arvimal.blog </a></h1>
+                <h1><a href="https://arvimal.blog/">arvimal.blog </a></h1>
                 <nav><ul>
-                    <li><a href="/category/testing.html">Testing</a></li>
+                    <li><a href="https://arvimal.blog/category/testing.html">Testing</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on arvimal.blog</h1>
     <ul>
-        <li><a href="/author/vimal-a-r.html">Vimal A R</a> (1)</li>
+        <li><a href="https://arvimal.blog/author/vimal-a-r.html">Vimal A R</a> (1)</li>
     </ul>
 </section>
 
@@ -34,6 +35,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="https://arvimal.blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
