--- a/output/tags.html
+++ b/output/tags.html
@@ -3,14 +3,15 @@
 <head>
         <meta charset="utf-8" />
         <title>arvimal.blog - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="https://arvimal.blog/theme/css/main.css" />
+        <link href="https://arvimal.blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="arvimal.blog Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">arvimal.blog </a></h1>
+                <h1><a href="https://arvimal.blog/">arvimal.blog </a></h1>
                 <nav><ul>
-                    <li><a href="/category/testing.html">Testing</a></li>
+                    <li><a href="https://arvimal.blog/category/testing.html">Testing</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -33,6 +34,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="https://arvimal.blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
